--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     <h3>Courses</h3>
     <input type="text" id="courseName" placeholder="Course Name">
-    <input type="number" id="courseFee" placeholder="Course Fee">
+    <input type="text" id="courseFee" placeholder="Course Fee">
     <button type="button" onclick="addCourse()">Add Course</button>
 
     <table id="courseTable">
